<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/back"

    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"
        />
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:padding="2dp"
        android:drawableLeft="@drawable/user"
        android:hint="@string/Username"
        />

    <EditText
        android:id="@+id/edittext_password"
        android:inputType="textPassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:padding="2dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/pass"
        android:hint="@string/Password"

        />
    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#00BCD4"
        android:text="@string/Login"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"
            />
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/REGISTER"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#00BCD4"

            />

    </LinearLayout>

</LinearLayout>